--- a/.github/workflows/flat.yaml
+++ b/.github/workflows/flat.yaml
@@ -6,7 +6,7 @@ on:
       - .github/workflows/flat.yml # Only run a new workflow every time this file (flat.yaml) file changes
   workflow_dispatch: # Required even though this is currently empty
   schedule:
-    - cron: '0 1 0 * *' # Run once a day
+    - cron: '33 1 * * *' # Run once a day
 
 jobs:
   scheduled:
