--- a/.github/workflows/flat.yaml
+++ b/.github/workflows/flat.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: Fetch data 
         uses: githubocto/flat@v3
         with:
-          http_url: http://oil.gge.gov.gr/ # The data to fetch
+          http_url: http://oil.gge.gov.gr/?p=15190 # The data to fetch. # WE ARE IN TESTING MODE, FETCH A SPECIFIC DATE ONLY
           downloaded_filename: test.html # The http_url gets saved and renamed in our repository as test.html
           # postprocess: postprocess.js # A postprocessing javascript or typescript file written in Deno
           # mask: true # optional param to mask the source http_url from the commit. Look at README for more options
