--- a/.github/workflows/flat.yaml
+++ b/.github/workflows/flat.yaml
@@ -25,7 +25,6 @@ jobs:
         uses: githubocto/flat@v3
         with:
           http_url: http://oil.gge.gov.gr/?feed=rss2
-          # http_url: http://oil.gge.gov.gr/?p=15190 # The data to fetch. # WE ARE IN TESTING MODE, FETCH A SPECIFIC DATE ONLY
           downloaded_filename: rss.xml # The http_url gets saved and renamed in our repository as test.html
           postprocess: postprocess.ts # A postprocessing javascript or typescript file written in Deno
-          # mask: true # optional param to mask the source http_url from the commit. Look at README for more options
+          mask: false # optional param to mask the source http_url from the commit. Look at README for more options
