Expose GH secrets to our flat action
So that it can post to elasticsearch

--- a/.github/workflows/flat.yaml
+++ b/.github/workflows/flat.yaml
@@ -22,6 +22,10 @@ jobs:
           deno-version: v1.x
       # The third step is a Flat Action step. We fetch the data in the http_url and save it as downloaded_filename
       - name: Fetch data
+        env:
+          ELASTICSEARCH_URL: ${{ secrets.ELASTICSEARCH_URL }}
+          ELASTICSEARCH_USERNAME: ${{ secrets.ELASTICSEARCH_USERNAME }}
+          ELASTICSEARCH_PASSWORD: ${{ secrets.ELASTICSEARCH_PASSWORD }}
         uses: githubocto/flat@v3
         with:
           http_url: http://oil.gge.gov.gr/?feed=rss2
