Add deno vscode extension to devcontainer
Let's pre-built the container with it instead of adding it every time

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,5 +2,12 @@
   "image": "mcr.microsoft.com/devcontainers/universal:2",
   "features": {
     "ghcr.io/devcontainers-contrib/features/deno:1": {}
-  }
+},
+"customizations": {
+	"vscode": {
+		"extensions": [
+			"denoland.vscode-deno"
+		]
+	}
+}
 }
