Try out node16 flat image
Following https://github.com/githubocto/flat/issues/76#issuecomment-1560825316

--- a/.github/workflows/flat.yaml
+++ b/.github/workflows/flat.yaml
@@ -26,7 +26,7 @@ jobs:
           ELASTICSEARCH_URL: ${{ secrets.ELASTICSEARCH_URL }}
           ELASTICSEARCH_USERNAME: ${{ secrets.ELASTICSEARCH_USERNAME }}
           ELASTICSEARCH_PASSWORD: ${{ secrets.ELASTICSEARCH_PASSWORD }}
-        uses: githubocto/flat@v3
+        uses: githubocto/flat@mr/node16
         with:
           http_url: http://oil.gge.gov.gr/?feed=rss2
           downloaded_filename: rss.xml # The http_url gets saved and renamed in our repository as test.html
