--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -31,9 +31,8 @@ jobs:
         with:
           deno-version: v1.x
 
-      # Uncomment this step to verify the use of 'deno fmt' on each commit.
-      # - name: Verify formatting
-      #   run: deno fmt --check
+      - name: Verify formatting
+        run: deno fmt --check src/
 
       # We still have 3 failing deno lint no-explicit-any things to fix, disable for now
       # - name: Run linter
