--- a/.github/workflows/flat.yaml
+++ b/.github/workflows/flat.yaml
@@ -19,9 +19,9 @@ jobs:
       # This step installs Deno, which is a new Javascript runtime that
       # improves on Node. We'll use it for postprocessing later
       - name: Setup deno
-        uses: denoland/setup-deno@main
+        uses: denoland/setup-deno@v2
         with:
-          deno-version: v1.x
+          deno-version: v2.x
       # The third step is a Flat Action step. We fetch the data in the http_url
       # and save it as downloaded_filename
       - name: Fetch data
