Update to become compatible with post 2025-11-07 API changes
Why:
Since 2025-11-07, the old wordpress site is no longer available. It has
been replaced by a new, apparently custom site, based on radsen and blazor.
It does provide a JSON API for fetching the posts and their details, so we
can rely on that one

What:
Amend the code, flat workflow and postprocess to use the new API.
Clean up rss.xml since it's no longer used.
Clean up state.json to remove old entries.
Feedparse is no longer dealing with XML but with JSON data.
However, most signatures for now are the same to avoid too many changes

--- a/.github/workflows/flat.yaml
+++ b/.github/workflows/flat.yaml
@@ -27,7 +27,7 @@ jobs:
       - name: Fetch data
         uses: githubocto/flat@v3
         with:
-          http_url: https://oil.mindev.gov.gr/?feed=rss2
-          downloaded_filename: rss.xml # The http_url gets saved and renamed in our repository as test.html
+          http_url: https://oil-be.tcloudapp.net/api/Posts/GetLastPosts
+          downloaded_filename: posts.json # The http_url gets saved and renamed in our repository as test.html
           postprocess: postprocess.ts # A postprocessing javascript or typescript file written in Deno
           mask: false # optional param to mask the source http_url from the commit. Look at README for more options
